test/files/run/stub-errors/TypeDef.check
error: newSource1.scala:3: missing or invalid dependency while loading 'constructor stuberrors.E.<init>' in class file 'E.class'.
Already compiled 'constructor stuberrors.E.<init>' requires access to type A in package stuberrors.
Make sure that type A is in your classpath and check for conflicting dependencies with `-Ylog-classpath`.
A full rebuild may help if 'E.class' was compiled against an incompatible version of stuberrors.
    class C {
          ^
error: newSource1.scala:4: overriding type D in class B with bounds <: stuberrors.A;
 type D has incompatible type
      new B { type D = E }
                   ^
error: newSource1.scala:4: missing or invalid dependency while loading 'type stuberrors.B.D' in class file 'B.class'.
Already compiled 'type stuberrors.B.D' requires access to type A in package stuberrors.
Make sure that type A is in your classpath and check for conflicting dependencies with `-Ylog-classpath`.
A full rebuild may help if 'B.class' was compiled against an incompatible version of stuberrors.
      new B { type D = E }
          ^